--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,24 @@
 [build-system]
-requires = ["hatchling", "serial"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
 name = "instec"
-version = "0.0.4"
+version = "0.0.5"
 authors = [
   { name="Matthew Chen", email="matthew.chen@instec.com" },
 ]
 description = "A basic implementation of SCPI commands for the MK2000B in Python."
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.8"
 license = {file = "LICENSE.txt"}
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+dependencies = [
+  'pyserial >= 3.0',
 ]
 
 [project.urls]
