--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -98,7 +98,7 @@ jobs:
 
     environment:
       name: testpypi
-      url: https://test.pypi.org/p/<package-name>
+      url: https://test.pypi.org/p/instec
 
     permissions:
       id-token: write
